# CBRdb

./: .gitignore  CBRdb.bib  Dockerfile  README.md  atlas_converter.py  clean_reaction_shortcuts.py  compounds_manual_add.py  environment.yml  fix_ec_ids.py  fix_reactions_data.py  kegg_atlas_compare.py  kegg_chiral_reaction_script.py  lets_get_kegg.py  merge_data_sets.py  mol_to_inchi.py  mol_to_smiles.py  preprocessor.py  pyproject.toml  run_all.py  setup.py
CBRdb/: AtomTracking.py  __init__.py  atlas_converter.py  atom_tracking.py  clean_reaction_shortcuts.py  compounds_manual_add.py  dry_run.py  fix_halogens.py  fix_reactions_data.py  lets_get_kegg.py  merge_data_sets.py  preprocessor.py  prune_reactions.py  tools_atom_tracking.py  tools_atoms.py  tools_complexity.py  tools_eq.py  tools_files.py  tools_mols.py  tools_mp.py  tools_plots.py  tools_requests.py
atom_tracking/: AtomTracking_Enhanced.py  AtomTracking_Enhanced_README.md  AtomTracking_README.md  atom_tracking.py  combine_out_files.py  run_atom_track.py  submit_atom_tracking.sh
build_tools/: environment.yml
data/: README.md  T_reaction_dupemap.csv  kegg_data_C.csv  kegg_data_C_deduped.csv  kegg_data_C_dupemap.csv  kegg_data_C_metadata.csv  kegg_data_C_metadata_deduped.csv  kegg_data_R.csv  kegg_data_RCs_processed.csv  kegg_data_R_dedupedCs.csv  kegg_data_R_kodefs.csv
examples/: AtomTracking(Enhanced).py  AtomTracking.sh  README.md  demo.ipynb  general.py  graph.py  run_all.py  run_atom_track.py  run_some.ipynb  skunkworks.ipynb  skunkworks.py
hpc/: CBRdb_C_formation_energies.csv  README.md  (+17 more)
(+34 files in other folders)
